metadata/force-app/main/default/objects/Bynder_Survey__c/Bynder_Survey__c.object-meta.xml
<CustomObject>
    <description>This object is created for Typeform App</description>
    <label>Bynder Survey</label>
    <nameField>
        <displayFormat>SURVEY-{000000}</displayFormat>
        <label>Bynder Survey</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bynder Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>