metadata/force-app/main/default/objects/Bynder_Survey__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bynder Surveys</relationshipLabel>
    <relationshipName>Bynder_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>