metadata/force-app/main/default/objects/Bynder_Survey__c/fields/Company_Asset_Storage__c.field-meta.xml
<CustomField>
    <fullName>Company_Asset_Storage__c</fullName>
    <inlineHelpText>Where will you store your company&apos;s assets going forward?</inlineHelpText>
    <label>Company Asset&apos;s Storage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>a non-DAM file storage (i.e. Dropbox, Box, G-drive, Sharepoint</fullName>
            </value>
            <value>
                <fullName>an internal solution</fullName>
            </value>
            <value>
                <fullName>Brandfolder</fullName>
            </value>
            <value>
                <fullName>Frontify</fullName>
            </value>
            <value>
                <fullName>Adobe Experience Manager</fullName>
            </value>
            <value>
                <fullName>Canto</fullName>
            </value>
            <value>
                <fullName>Canva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>