metadata/force-app/main/default/objects/Bynder_Survey__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bynder Surveys</relationshipLabel>
    <relationshipName>Bynder_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>