metadata/force-app/main/default/objects/Bynder_Survey__c/fields/Customer_Success_Satisfaction_Example__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Satisfaction_Example__c</fullName>
    <inlineHelpText>Can you provide specific examples? (Customer Success)</inlineHelpText>
    <label>Customer Success Satisfaction Example</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>