metadata/force-app/main/default/objects/Bynder_Survey__c/fields/Did_you_help_implement_Bynder__c.field-meta.xml
<CustomField>
    <fullName>Did_you_help_implement_Bynder__c</fullName>
    <label>Did you help implement Bynder?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Partially</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>