metadata/force-app/main/default/objects/Bynder_Survey__c/fields/Do_you_use_other_platforms_a_lot__c.field-meta.xml
<CustomField>
    <fullName>Do_you_use_other_platforms_a_lot__c</fullName>
    <label>Do you use other platforms a lot?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Lightning Web Component Connector</fullName>
            </value>
            <value>
                <fullName>Salesforce Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Salesforce Commerce Cloud</fullName>
            </value>
            <value>
                <fullName>SAP Commerce Cloud</fullName>
            </value>
            <value>
                <fullName>Sprout Social</fullName>
            </value>
            <value>
                <fullName>SharePoint</fullName>
            </value>
            <value>
                <fullName>Asana</fullName>
            </value>
            <value>
                <fullName>Salsify</fullName>
            </value>
            <value>
                <fullName>Adobe CC Connector</fullName>
            </value>
            <value>
                <fullName>Bigtincan</fullName>
            </value>
            <value>
                <fullName>Contentful</fullName>
            </value>
            <value>
                <fullName>Contentstack</fullName>
            </value>
            <value>
                <fullName>Akeneo</fullName>
            </value>
            <value>
                <fullName>InRiver</fullName>
            </value>
            <value>
                <fullName>Hootsuite</fullName>
            </value>
            <value>
                <fullName>Magnolia</fullName>
            </value>
            <value>
                <fullName>Sprinklr</fullName>
            </value>
            <value>
                <fullName>Optimizely</fullName>
            </value>
            <value>
                <fullName>Showpad</fullName>
            </value>
            <value>
                <fullName>Figma</fullName>
            </value>
            <value>
                <fullName>Getty Images</fullName>
            </value>
            <value>
                <fullName>Wrike</fullName>
            </value>
            <value>
                <fullName>Seismic</fullName>
            </value>
            <value>
                <fullName>Monday.com</fullName>
            </value>
            <value>
                <fullName>Sitecore</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Workfront</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>