metadata/force-app/main/default/objects/Bynder_Survey__c/fields/Experience_with_Customer_Success_Team__c.field-meta.xml
<CustomField>
    <fullName>Experience_with_Customer_Success_Team__c</fullName>
    <inlineHelpText>Rate your experience with Customer Success team.</inlineHelpText>
    <label>Experience with Customer Success Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>