metadata/force-app/main/default/objects/Bynder_Survey__c/fields/Feedback_to_Bynder__c.field-meta.xml
<CustomField>
    <fullName>Feedback_to_Bynder__c</fullName>
    <inlineHelpText>Any other feedback you&apos;d like to provide to Bynder Leadership?</inlineHelpText>
    <label>Feedback to Bynder Leadership</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>