metadata/force-app/main/default/objects/Bynder_Survey__c/fields/Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group__c</fullName>
    <label>Industry Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Consumer Brands</fullName>
            </value>
            <value>
                <fullName>Education Government and Non Profit</fullName>
            </value>
            <value>
                <fullName>Finance and Insurance</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Hospitality and Recreation</fullName>
            </value>
            <value>
                <fullName>Industrials</fullName>
            </value>
            <value>
                <fullName>Legal and Real Estate</fullName>
            </value>
            <value>
                <fullName>Marketing and Consulting Media</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>