metadata/force-app/main/default/objects/Bynder_Survey__c/fields/Product_Satisfaction_Examples__c.field-meta.xml
<CustomField>
    <fullName>Product_Satisfaction_Examples__c</fullName>
    <inlineHelpText>How would you rate your satisfaction with our product?</inlineHelpText>
    <label>Product Satisfaction Examples</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>