metadata/force-app/main/default/objects/Bynder_Survey__c/fields/Product_Satisfaction_Rate__c.field-meta.xml
<CustomField>
    <fullName>Product_Satisfaction_Rate__c</fullName>
    <inlineHelpText>How would you rate your satisfaction with our product?</inlineHelpText>
    <label>Product Satisfaction Rate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Very Dissatisfied</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - Very Satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>