metadata/force-app/main/default/objects/Bynder_Survey__c/fields/Reason_for_Leaving__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Leaving__c</fullName>
    <inlineHelpText>Care to share more details about your reason for leaving?</inlineHelpText>
    <label>Details of Reason for Leaving</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>