metadata/force-app/main/default/objects/Bynder_Survey__c/fields/Response_Id_Typeform__c.field-meta.xml
<CustomField>
    <fullName>Response_Id_Typeform__c</fullName>
    <description>This field is storing response Id from Typeform for debugging purpose</description>
    <label>Response Id (Typeform)</label>
    <type>TextArea</type>
</CustomField>