metadata/force-app/main/default/objects/Bynder_Survey__c/fields/Typeform_Form__c.field-meta.xml
<CustomField>
    <fullName>Typeform_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Typeform Form</label>
    <referenceTo>typeform__Form__c</referenceTo>
    <relationshipLabel>Bynder Surveys</relationshipLabel>
    <relationshipName>Bynder_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>