metadata/force-app/main/default/objects/Bynder_Survey__c/fields/Typeform_Response_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Typeform_Response_Timestamp__c</fullName>
    <description>Timestamp from Typeform Response</description>
    <label>Typeform Response Timestamp</label>
    <type>DateTime</type>
</CustomField>