metadata/force-app/main/default/objects/Bynder_Survey__c/fields/What_is_your_primary_reason_for_leaving__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_primary_reason_for_leaving__c</fullName>
    <label>What is your primary reason for leaving?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Budget cuts or pricing too high</fullName>
            </value>
            <value>
                <fullName>Organizational restructuring</fullName>
            </value>
            <value>
                <fullName>Corporate consolidation of tools</fullName>
            </value>
            <value>
                <fullName>Missing critical features or lacking innovation</fullName>
            </value>
            <value>
                <fullName>Poor experience with Bynder CS or Support</fullName>
            </value>
            <value>
                <fullName>Lack of ownership, resources or governance</fullName>
            </value>
            <value>
                <fullName>Lack of value, ROI, or use case</fullName>
            </value>
            <value>
                <fullName>Platform performance issues or bug resolution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>