metadata/force-app/main/default/objects/Bynder_Survey__c/fields/What_platform_did_you_use_before_Bynder__c.field-meta.xml
<CustomField>
    <fullName>What_platform_did_you_use_before_Bynder__c</fullName>
    <label>What platform did you use before Bynder?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>