metadata/force-app/main/default/objects/Bynder_Survey__c/fields/What_referencing_are_you_open_to__c.field-meta.xml
<CustomField>
    <fullName>What_referencing_are_you_open_to__c</fullName>
    <label>What referencing are you open to?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Joining the Bynder Community</fullName>
            </value>
            <value>
                <fullName>Posting a social media post about Bynder</fullName>
            </value>
            <value>
                <fullName>Peer to Peer Support</fullName>
            </value>
            <value>
                <fullName>Leaving a G2 Review</fullName>
            </value>
            <value>
                <fullName>Speaking at an event (in person or virtual)</fullName>
            </value>
            <value>
                <fullName>Public Customer Story</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>