metadata/force-app/main/default/objects/Bynder_Survey__c/fields/Which_Bynder_modules_do_you_use__c.field-meta.xml
<CustomField>
    <fullName>Which_Bynder_modules_do_you_use__c</fullName>
    <label>Which Bynder modules do you use?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digital Asset Management</fullName>
            </value>
            <value>
                <fullName>Brand Guidelines</fullName>
            </value>
            <value>
                <fullName>Asset Workflow</fullName>
            </value>
            <value>
                <fullName>Studio</fullName>
            </value>
            <value>
                <fullName>Dynamic Asset Transformation</fullName>
            </value>
            <value>
                <fullName>Print Brand Templates</fullName>
            </value>
            <value>
                <fullName>AI Search</fullName>
            </value>
            <value>
                <fullName>Bynder Analytics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>